terraform/env/civo/templates/gateway-booking-app.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: booking-app-gateway
  namespace: booking-app-${namespace}
spec:
  gatewayClassName: civo-merged
  listeners:
    - name: http
      hostname: "${namespace}.${cluster_name}.${domain_name}"
      protocol: HTTP
      port: 80
